src/test/ui/const-generics/defaults/needs-feature.none.stderr
error: type parameters must be declared prior to const parameters
  --> $DIR/needs-feature.rs:9:26
   |
LL | struct A<const N: usize, T=u32>(T);
   |         -----------------^----- help: reorder the parameters: lifetimes, then types, then consts: `<T = u32, const N: usize>`

error: aborting due to previous error

